--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "request": "^2.88.2"
   }
